{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 448,
  "lineage": "2f4ef06d-0acf-6495-973b-b99a6cd59c13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9de6e2d2f067fca",
            "arn": "arn:aws:ec2:us-east-1:355366859850:instance/i-0e2cdd377ed8da060",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_instance_profile",
            "id": "i-0e2cdd377ed8da060",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_wordpress",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a774285ee55cb674",
            "private_dns": "ip-10-0-1-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.165",
            "public_dns": "ec2-34-238-115-145.compute-1.amazonaws.com",
            "public_ip": "34.238.115.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Architect": "Luiz Carlos Rodrigues",
                  "Company": "Acme Corporation",
                  "Environment": "Development",
                  "Owner": "AWS Especializacao",
                  "Project": "Project_01 WordPress AWS Migration"
                },
                "tags_all": {
                  "Architect": "Luiz Carlos Rodrigues",
                  "Company": "Acme Corporation",
                  "Environment": "Development",
                  "Owner": "AWS Especializacao",
                  "Project": "Project_01 WordPress AWS Migration"
                },
                "throughput": 0,
                "volume_id": "vol-0ac34a6bd691ff89e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0579e3b8f6e660e8a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0145ee10eb6762b2a",
            "tags": {
              "Name": "EC2_WordPress",
              "OS": "Ubuntu 22.04"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "EC2_WordPress",
              "OS": "Ubuntu 22.04",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0579e3b8f6e660e8a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_instance_profile",
            "aws_iam_role.ec2-s3-read",
            "aws_key_pair.key_wordpress",
            "aws_security_group.sg_wordpress",
            "aws_subnet.subnet_wordpress_public_01",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:internet-gateway/igw-016666390ede433db",
            "id": "igw-016666390ede433db",
            "owner_id": "355366859850",
            "tags": {
              "Name": "IGW WordPress"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "IGW WordPress",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_wordpress_internet_facing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:355366859850:loadbalancer/app/lb-wordpress-internet-facing/49e80dbf049edc44",
            "arn_suffix": "app/lb-wordpress-internet-facing/49e80dbf049edc44",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-wordpress-internet-facing-448809927.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:355366859850:loadbalancer/app/lb-wordpress-internet-facing/49e80dbf049edc44",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-wordpress-internet-facing",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0579e3b8f6e660e8a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0145ee10eb6762b2a"
              },
              {
                "subnet_id": "subnet-0df247d48eb119ace"
              }
            ],
            "subnets": [
              "subnet-0145ee10eb6762b2a",
              "subnet-0df247d48eb119ace"
            ],
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_wordpress",
            "aws_subnet.subnet_wordpress_public_01",
            "aws_subnet.subnet_wordpress_public_02",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_wordpress_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:network-acl/acl-079df2b90956a75b0",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              }
            ],
            "id": "acl-079df2b90956a75b0",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "355366859850",
            "subnet_ids": [
              "subnet-0145ee10eb6762b2a",
              "subnet-0df247d48eb119ace"
            ],
            "tags": {
              "Name": "acl_wordpress_private"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "acl_wordpress_private",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.subnet_wordpress_public_01",
            "aws_subnet.subnet_wordpress_public_02",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_wordpress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:network-acl/acl-053dd1fd17beca6be",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "all",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              }
            ],
            "id": "acl-053dd1fd17beca6be",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "355366859850",
            "subnet_ids": [
              "subnet-0145ee10eb6762b2a",
              "subnet-0df247d48eb119ace"
            ],
            "tags": {
              "Name": "acl_wordpress_public"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "acl_wordpress_public",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.subnet_wordpress_public_01",
            "aws_subnet.subnet_wordpress_public_02",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_default_public_subnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-016666390ede433db",
            "id": "r-rtb-0219b3b1730913dc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0219b3b1730913dc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_wordpress",
            "aws_route_table.rt_wordpress_public",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_default_public_subnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-016666390ede433db",
            "id": "r-rtb-0219b3b1730913dc11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0219b3b1730913dc1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_wordpress",
            "aws_route_table.rt_wordpress_public",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_wordpress_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:route-table/rtb-0f15680accce8be42",
            "id": "rtb-0f15680accce8be42",
            "owner_id": "355366859850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_wordpress_private"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "rt_wordpress_private",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_wordpress_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:route-table/rtb-0219b3b1730913dc1",
            "id": "rtb-0219b3b1730913dc1",
            "owner_id": "355366859850",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt_wordpress_public"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "rt_wordpress_public",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_wordpress_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066d09c02bfd0716b",
            "route_table_id": "rtb-0f15680accce8be42",
            "subnet_id": "subnet-0b986c6afebeb4fc3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_wordpress_private",
            "aws_subnet.subnet_wordpress_private_01",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_wordpress_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0041477e407aa2c30",
            "route_table_id": "rtb-0f15680accce8be42",
            "subnet_id": "subnet-074eae42ef7582293"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_wordpress_private",
            "aws_subnet.subnet_wordpress_private_02",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_wordpress_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d9d4a066b032e9",
            "route_table_id": "rtb-0219b3b1730913dc1",
            "subnet_id": "subnet-0145ee10eb6762b2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_wordpress_public",
            "aws_subnet.subnet_wordpress_public_01",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc_wordpress_public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055f7545fd1b87076",
            "route_table_id": "rtb-0219b3b1730913dc1",
            "subnet_id": "subnet-0df247d48eb119ace"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.rt_wordpress_public",
            "aws_subnet.subnet_wordpress_public_02",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS_allow_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:security-group/sg-0cdb9eed3062bb9ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdb9eed3062bb9ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0579e3b8f6e660e8a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20250606200213352000000007",
            "name_prefix": "terraform-",
            "owner_id": "355366859850",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS_allow_rule ec2"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "RDS_allow_rule ec2",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_wordpress",
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:security-group/sg-0579e3b8f6e660e8a",
            "description": "Security Group for WordPress Project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberate Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0579e3b8f6e660e8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ping ",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 8
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberate Inboud HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberate Inboud SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Liberate Inbound HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sg_wordpress20250606200209864700000004",
            "name_prefix": "sg_wordpress",
            "owner_id": "355366859850",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_wordpress_private_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:subnet/subnet-0b986c6afebeb4fc3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b986c6afebeb4fc3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355366859850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_wordpress_private_01"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "subnet_wordpress_private_01",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_wordpress_private_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:subnet/subnet-074eae42ef7582293",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074eae42ef7582293",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355366859850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_wordpress_private_02"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "subnet_wordpress_private_02",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_wordpress_public_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:subnet/subnet-0145ee10eb6762b2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0145ee10eb6762b2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355366859850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_wordpress_public_01"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "subnet_wordpress_public_01",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_wordpress_public_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:subnet/subnet-0df247d48eb119ace",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df247d48eb119ace",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "355366859850",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_wordpress_public_02"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "subnet_wordpress_public_02",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            },
            "vpc_id": "vpc-02ade7f66aa16cc4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_wordpress"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:355366859850:vpc/vpc-02ade7f66aa16cc4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a217c87c91c3cc04",
            "default_route_table_id": "rtb-09bb24d23ffa471e3",
            "default_security_group_id": "sg-04f8d1b2b2c58b9ff",
            "dhcp_options_id": "dopt-0df028d5e07c8099c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ade7f66aa16cc4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bb24d23ffa471e3",
            "owner_id": "355366859850",
            "tags": {
              "Name": "VPC Wordpress"
            },
            "tags_all": {
              "Architect": "Luiz Carlos Rodrigues",
              "Company": "Acme Corporation",
              "Environment": "Development",
              "Name": "VPC Wordpress",
              "Owner": "AWS Especializacao",
              "Project": "Project_01 WordPress AWS Migration"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}